[package]
name = "orbterm"
description = "The Orbital Terminal"
repository = "https://github.com/redox-os/orbterm"
version = "0.3.2"
license = "MIT"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "orbterm"
path = "src/main.rs"

[dependencies]
failure   = "0.1.1"
orbclient = "0.3.13"
orbfont   = "0.1"
ransid    = "0.4"
serde     = "1.0"
serde_derive = "1.0"
toml      = "0.4"
xdg = { git = "https://github.com/whitequark/rust-xdg" }
# TODO: Replace with crates.io when next xdg version is released

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_termios = "0.1"
redox_syscall = "0.1"
