[package]
name = "orbterm"
description = "The Orbital Terminal"
repository = "https://gitlab.redox-os.org/redox-os/orbterm"
version = "0.3.6"
license = "MIT"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "orbterm"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.8", optional = true }
failure = "0.1.5"
orbclient = "0.3.24"
orbfont = "0.1.8"
ransid = "0.4.7"
serde = "1.0.94"
serde_derive = "1.0.94"
toml = "0.5.1"
xdg = "2.2.0"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.59"

[target.'cfg(target_os = "redox")'.dependencies]
redox_termios = "0.1.2"
redox_syscall = "0.2.12"
